add some spark rdd calc